@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/fontconfig
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.111 2008/05/25 01:48:30 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/fontconfig/ChangeLog,v 1.112 2008/05/25 09:15:44 dirtyepic Exp $
+
+*fontconfig-2.5.93 (25 May 2008)
+
+  25 May 2008; Ryan Hill <dirtyepic@gentoo.org> +fontconfig-2.5.93.ebuild:
+  Version bump.
+
+  (should've waited an hour)
 
 *fontconfig-2.5.92 (25 May 2008)
 
